# djot-tools

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.dj  README.md  default.nix  flake.nix  shell.nix
.vim/: coc-settings.json
crates/djot-core/: Cargo.toml
crates/djot-core/src/: analysis.rs  diagnostics.rs  edits.rs  lib.rs  references.rs  workspace.rs
crates/djot-core/src/cst/: mod.rs
crates/djot-core/src/tasks/: edits.rs
crates/djot-core/src/tests/: analysis.rs  common.rs  mod.rs  rename.rs  task_editing.rs  workspace.rs
crates/djot-export/: Cargo.toml
crates/djot-export/src/: main.rs
crates/djot-filter/: Cargo.toml
crates/djot-filter/src/: interactive.rs  main.rs  query.rs  render.rs  tasks.rs
crates/djot-language-server/: Cargo.toml
crates/djot-language-server/src/: adapter.rs  ast.rs  document_symbol.rs  main.rs  utils.rs
crates/djot-ls/: Cargo.toml
crates/djot-ls/src/: code_action.rs  main.rs  semantic_tokens.rs  server.rs  symbols.rs
crates/djot-ls/tests/: code_action.rs  completion.rs  definition.rs  diagnostics.rs  document_symbol.rs  hover.rs  notifications.rs  references.rs  rename.rs  semantic_tokens.rs
crates/djot-ls/tests/support/: mod.rs
crates/tree-sitter-djot/: .gitignore  README.md  package.json
crates/tree-sitter-djot-custom/: .gitignore  Main.hs  grammar.js
crates/tree-sitter-djot-custom/docs/: strategy.dj
crates/tree-sitter-djot-custom/scripts/: bootstrap.sh
crates/tree-sitter-djot-custom/src/: scanner.c
crates/tree-sitter-djot-custom/test/corpus/: syntax.txt
crates/tree-sitter-djot/scripts/: patch-bindings.js
dev/: nvim.lua  strip-sections.lua
dev/hooks/: pre-commit
djot-language-server/src/: document_symbol.rs  main.rs
docs/: cst-refactor.dj  neovim-file-watching.dj  plan.dj  semantics.dj
examples/: article.dj  djot-export.dj  djot-filter.dj  djot-ls.dj  feature-targets.dj  features.dj  index.dj  links.dj  metadata-scratch.dj  outline.dj
skills/djot-markup/: SKILL.md
skills/djot-markup/agents/: openai.yaml
skills/djot-semantic-notes/: SKILL.md
src/: document_symbol.rs  main.rs  utils.rs
tree-sitter-djot/: Cargo.toml
