[workspace]
resolver = "2"
members = ["crates/djot-core", "crates/djot-ls", "crates/djot-export", "crates/djot-filter"]

[workspace.package]
version = "0.11.0-dev"
edition = "2021"
license = "MIT"

[workspace.dependencies]
cel = "0.13.0"
clap = { version = "4.5", features = ["derive"] }
jotdown = "0.10.0"
shlex = "1.3.0"
skim = "0.10.4"
toml = "1.1.2"
