[workspace]
resolver = "2"
members = ["crates/djot-core", "crates/djot-ls", "crates/djot-export", "crates/djot-filter"]

[workspace.package]
version = "0.13.0-dev"
edition = "2021"
license = "MIT"

[workspace.dependencies]
cel = "0.13.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.2.2"
jotdown = "0.10.0"
shlex = "1.3.0"
skim = "0.10.4"
toml = "1.1.2"
