[package]
name = "djot-filter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cel.workspace = true
chrono.workspace = true
clap.workspace = true
comfy-table.workspace = true
djot-core = { path = "../djot-core" }
shlex.workspace = true
skim.workspace = true
toml.workspace = true
