[package]
name = "djot-language-server"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "*"

[dependencies]
dashmap = "6.0.1"
ropey = "1.6.1"
tokio = {version = "1.38.0", features = ["full"]}
tower-lsp = "0.20.0"
tree-sitter = "0.22.6"
tree-sitter-djot = {path = "../tree-sitter-djot"}
uri = "0.4.0"
