[package]
name = "djot-ls"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
djot-core = { path = "../djot-core" }
async-lsp = { version = "0.2.4", features = ["tokio"] }
futures = { version = "0.3.28", default-features = false, features = ["async-await", "std"] }
lsp-types = "0.95.0"
tokio = { version = "1.51.0", features = ["io-std", "io-util", "macros", "net", "rt", "time"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3.16"

[dev-dependencies]
serde_json = "1"
